# OS_labs

./: CMakeLists.txt  emulator.cpp  logger.cpp
httplib/: httplib.h
lab1/rep/: CMakeLists.txt  auto_build.cmd  auto_build.sh
lab2/rep/: CMakeLists.txt
lab2/rep/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
lab2/rep/include/: background_launcher.hpp
lab2/rep/src/: background_launcher.cpp  main.cpp
lab3/rep/: CMakeLists.txt
lab3/rep/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  log.txt
lab3/rep/include/: main_utils.hpp  my_shmem.hpp  my_thread.hpp
lab3/rep/src/: main.cpp  main_utils.cpp
lab4/rep/: CMakeLists.txt  logger.cpp  my_serial.hpp
lab4/rep/launch_scripts/linux/: open_ports.sh  run_emulator.sh
lab4/rep/launch_scripts/windows/: checking_logs.bat  run_logger.bat
lab5/rep/: db_manager.hpp
lab5/rep/launch_scripts/linux/: sensor_data.sqlite
lab5/rep/launch_scripts/windows/: run_emulator.bat  run_logger.bat  sensor_data.sqlite
lab5/rep/launch_scripts/windows/web_client/: index.html
lab5/rep/sqlite/: shell.c
launch_scripts/linux/: checking_logs.sh  run_logger.sh
